feat(orchestrator): DDD multi-provider AI routing with runtime config #59
Two-enum separation: ProviderTier (ANALYSIS/MIGRATION call quality) vs
ProviderCostTier (FREE/PAID billing) are now distinct — no longer conflated.

Provider routing (SOLID/hexagonal):
- ProviderFactory SPI — adding a provider = one new @Component, zero registry changes
- TierPreferenceStrategy / ExplicitOrderStrategy via ProviderSelectionStrategy port
- ProviderConfigResolver merges DB overrides with YAML defaults per call
- ProviderRegistry.refreshProviders() swaps the live pool atomically on config change
- ProviderRouter reads registry on every chat() call and uses lazy CB init so
  new providers added at runtime automatically get a circuit breaker

User-configurable provider settings (full hexagonal layers):
- Domain: ProviderConfig aggregate, ports (UpdateProviderConfig, GetProviderConfigs,
  ProviderConfigRepository, ApiKeyEncryptionPort, ProviderRefreshPort)
- Application service: ProviderConfigService — saves override, triggers refresh
- Persistence adapter: JPA + Flyway V1 migration (provider_configs table)
- Encryption adapter: AES-256-GCM with per-call random IV; key from
  PROVIDER_CONFIG_ENCRYPTION_KEY env var (refuses to encrypt if unset)
- REST adapter: PUT /api/ai/providers/{id} to override keys/models at runtime;
  GET /api/ai/providers to list effective config; API key is write-only (never returned)

Security: API keys stored encrypted, never logged, never returned via REST.
Circuit breakers prevent retry storms against a broken provider endpoint.
All config values are env-var backed — nothing hardcoded in Java.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>